# Rust-short

nsassenb-00/ex00/: hello.rs
nsassenb-00/ex01/: min.rs
nsassenb-00/ex02/: collatz.rs  print_bytes.rs  yes.rs
nsassenb-00/ex03/: fizzbuzz.rs
nsassenb-00/ex04/: Cargo.toml
nsassenb-00/ex04/src/: other.rs  overflow.rs
nsassenb-00/ex05/: Cargo.toml
nsassenb-00/ex05/src/: main.rs
nsassenb-00/ex06/: Cargo.toml
nsassenb-00/ex06/src/: main.rs
nsassenb-00/ex07/: Cargo.toml
nsassenb-00/ex07/src/: lib.rs  main.rs
nsassenb-01/: Cargo.toml
nsassenb-01/ex00/: Cargo.toml
nsassenb-01/ex00/src/: lib.rs
nsassenb-01/ex01/: Cargo.toml
nsassenb-01/ex01/src/: lib.rs
nsassenb-01/ex02/: Cargo.toml
nsassenb-01/ex02/src/: lib.rs
nsassenb-01/ex03/: Cargo.toml
nsassenb-01/ex03/src/: lib.rs
nsassenb-01/ex04/: Cargo.toml
nsassenb-01/ex04/src/: lib.rs
nsassenb-01/ex05/: Cargo.toml
nsassenb-01/ex05/src/: lib.rs
nsassenb-01/ex06/: Cargo.toml
nsassenb-01/ex06/src/: lib.rs
nsassenb-01/ex07/: Cargo.toml
nsassenb-01/ex07/src/: lib.rs
nsassenb-02/: Cargo.toml
nsassenb-02/ex01/src/: lib.rs
nsassenb-02/ex02/src/: lib.rs
nsassenb-02/ex03/src/: main.rs
nsassenb-02/ex04/src/: main.rs
nsassenb-02/ex05/src/: lib.rs
nsassenb-02/ex06/src/: lib.rs
nsassenb-02/ex07/src/: main.rs
nsassenb-04/: Dockerfile
nsassenb-04/ex07/: Cargo.toml
nsassenb-05/: Cargo.toml  out.txt
nsassenb-05/ex05/: Cargo.toml
nsassenb-06/: Cargo.toml
nsassenb-06/ex04/: Cargo.toml
nsassenb-06/ex06/: Cargo.toml  awesome.c  build.rs
nsassenb-06/ex07/: Cargo.toml
(+32 files in other folders)
