[package]
name = "module00-ex04"
authors = ["nsassenb <nsassenb@student.42vienna.com>"]
description = "my answer to the fifth exercise of the first module of 42's Rust Piscine"
version = "0.1.0"
edition = "2021"
default-run = "module00-ex04"
publish = false

[[bin]]
name = "other"
path = "./src/other.rs"

[[bin]]
name = "test-overflows"
path = "./src/overflow.rs"

[profile.release]
strip = "symbols"

[profile.no-overflows]
inherits = "dev"
overflow-checks = false

[dependencies]
